--- a/prologin/problems/templates/problems/stub_search_form.html
+++ b/prologin/problems/templates/problems/stub_search_form.html
@@ -1,5 +1,5 @@
 {% load i18n bootstrap %}
-<form class="form-inline well" method="GET" action="{% url 'training:search' %}">
+<form class="form-inline well" method="GET" action="{% url 'training:search' %}#problems">
 	<h4>{% trans "Search problems" %}</h4>
 	{{ search_form.query|bootstrap }}
 	{{ search_form.event_type|bootstrap }}
